# xcshim

./: .azure-pipelines.yml  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: 10-xcshim.sh.in  CMakeLists.txt  Info.plist.in  carthage.in  xcode-select.in  xcodebuild.in  xcrun.in
